use flex-grow for chat output. fixes rendering on safari

--- a/www/app/main.css
+++ b/www/app/main.css
@@ -59,7 +59,7 @@ input {
 }
 
 #chatoutput {
-	height: 100%;
+	flex-grow: 100;
 	border: 0;
 }
 
